# app/controllers/book_controller.go
@@ -1,0 +1,453 @@
+package controllers
+
+import (
+	"time"
+
+	"book-rapid-development-with-fiber/app/models"
+	"book-rapid-development-with-fiber/pkg/repository"
+	"book-rapid-development-with-fiber/pkg/utils"
+	"book-rapid-development-with-fiber/platform/database"
+	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
+)
+
+// GetBooks func gets all exists books.
+// @Description Get all exists books.
+// @Summary get all exists books
+// @Tags Book
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.Book
+// @Router /v1/books [get]
+func GetBooks(c *fiber.Ctx) error {
+	// Create database connection.
+	db, err := database.OpenDBConnection()
+	if err != nil {
+		// Return status 500 and database connection error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Get all books.
+	books, err := db.GetBooks()
+	if err != nil {
+		// Return, if books not found.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "books were not found",
+			"count": 0,
+			"books": nil,
+		})
+	}
+
+	// Return status 200 OK.
+	return c.JSON(fiber.Map{
+		"error": false,
+		"msg":   nil,
+		"count": len(books),
+		"books": books,
+	})
+}
+
+// GetBook func gets book by given ID or 404 error.
+// @Description Get book by given ID.
+// @Summary get book by given ID
+// @Tags Book
+// @Accept json
+// @Produce json
+// @Param id path string true "Book ID"
+// @Success 200 {object} models.Book
+// @Router /v1/book/{id} [get]
+func GetBook(c *fiber.Ctx) error {
+	// Catch book ID from URL.
+	id, err := uuid.Parse(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Create database connection.
+	db, err := database.OpenDBConnection()
+	if err != nil {
+		// Return status 500 and database connection error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Get book by ID.
+	book, err := db.GetBook(id)
+	if err != nil {
+		// Return, if book not found.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "book with the given ID is not found",
+			"book":  nil,
+		})
+	}
+
+	// Return status 200 OK.
+	return c.JSON(fiber.Map{
+		"error": false,
+		"msg":   nil,
+		"book":  book,
+	})
+}
+
+// CreateBook func for creates a new book.
+// @Description Create a new book.
+// @Summary create a new book
+// @Tags Book
+// @Accept json
+// @Produce json
+// @Param title body string true "Title"
+// @Param author body string true "Author"
+// @Param user_id body string true "User ID"
+// @Param book_attrs body models.BookAttrs true "Book attributes"
+// @Success 200 {object} models.Book
+// @Security ApiKeyAuth
+// @Router /v1/book [post]
+func CreateBook(c *fiber.Ctx) error {
+	// Get now time.
+	now := time.Now().Unix()
+
+	// Get claims from JWT.
+	claims, err := utils.ExtractTokenMetadata(c)
+	if err != nil {
+		// Return status 500 and JWT parse error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Set expiration time from JWT data of current book.
+	expires := claims.Expires
+
+	// Checking, if now time greather than expiration from JWT.
+	if now > expires {
+		// Return status 401 and unauthorized error message.
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": true,
+			"msg":   "unauthorized, check expiration time of your token",
+		})
+	}
+
+	// Set credential `book:create` from JWT data of current book.
+	credential := claims.Credentials[repository.BookCreateCredential]
+
+	// Only user with `book:create` credential can create a new book.
+	if !credential {
+		// Return status 403 and permission denied error message.
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"error": true,
+			"msg":   "permission denied, check credentials of your token",
+		})
+	}
+
+	// Create new Book struct
+	book := &models.Book{}
+
+	// Check, if received JSON data is valid.
+	if err := c.BodyParser(book); err != nil {
+		// Return status 400 and error message.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Create database connection.
+	db, err := database.OpenDBConnection()
+	if err != nil {
+		// Return status 500 and database connection error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Create a new validator for a Book model.
+	validate := utils.NewValidator()
+
+	// Set initialized default data for book:
+	book.ID = uuid.New()
+	book.CreatedAt = time.Now()
+	book.UserID = claims.UserID
+	book.BookStatus = 1 // 0 == draft, 1 == active
+
+	// Validate book fields.
+	if err := validate.Struct(book); err != nil {
+		// Return, if some fields are not valid.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   utils.ValidatorErrors(err),
+		})
+	}
+
+	// Delete book by given ID.
+	if err := db.CreateBook(book); err != nil {
+		// Return status 500 and error message.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Return status 200 OK.
+	return c.JSON(fiber.Map{
+		"error": false,
+		"msg":   nil,
+		"book":  book,
+	})
+}
+
+// UpdateBook func for updates book by given ID.
+// @Description Update book.
+// @Summary update book
+// @Tags Book
+// @Accept json
+// @Produce json
+// @Param id body string true "Book ID"
+// @Param title body string true "Title"
+// @Param author body string true "Author"
+// @Param user_id body string true "User ID"
+// @Param book_status body integer true "Book status"
+// @Param book_attrs body models.BookAttrs true "Book attributes"
+// @Success 202 {string} status "ok"
+// @Security ApiKeyAuth
+// @Router /v1/book [put]
+func UpdateBook(c *fiber.Ctx) error {
+	// Get now time.
+	now := time.Now().Unix()
+
+	// Get claims from JWT.
+	claims, err := utils.ExtractTokenMetadata(c)
+	if err != nil {
+		// Return status 500 and JWT parse error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Set expiration time from JWT data of current book.
+	expires := claims.Expires
+
+	// Checking, if now time greather than expiration from JWT.
+	if now > expires {
+		// Return status 401 and unauthorized error message.
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": true,
+			"msg":   "unauthorized, check expiration time of your token",
+		})
+	}
+
+	// Set credential `book:update` from JWT data of current book.
+	credential := claims.Credentials[repository.BookUpdateCredential]
+
+	// Only book creator with `book:update` credential can update his book.
+	if !credential {
+		// Return status 403 and permission denied error message.
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"error": true,
+			"msg":   "permission denied, check credentials of your token",
+		})
+	}
+
+	// Create new Book struct
+	book := &models.Book{}
+
+	// Check, if received JSON data is valid.
+	if err := c.BodyParser(book); err != nil {
+		// Return status 400 and error message.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Create database connection.
+	db, err := database.OpenDBConnection()
+	if err != nil {
+		// Return status 500 and database connection error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Checking, if book with given ID is exists.
+	foundedBook, err := db.GetBook(book.ID)
+	if err != nil {
+		// Return status 404 and book not found error.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "book with this ID not found",
+		})
+	}
+
+	// Set user ID from JWT data of current user.
+	userID := claims.UserID
+
+	// Only the creator can delete his book.
+	if foundedBook.UserID == userID {
+		// Set initialized default data for book:
+		book.UpdatedAt = time.Now()
+
+		// Create a new validator for a Book model.
+		validate := utils.NewValidator()
+
+		// Validate book fields.
+		if err := validate.Struct(book); err != nil {
+			// Return, if some fields are not valid.
+			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+				"error": true,
+				"msg":   utils.ValidatorErrors(err),
+			})
+		}
+
+		// Update book by given ID.
+		if err := db.UpdateBook(foundedBook.ID, book); err != nil {
+			// Return status 500 and error message.
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"error": true,
+				"msg":   err.Error(),
+			})
+		}
+
+		// Return status 201.
+		return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+			"error": false,
+			"msg":   nil,
+		})
+	} else {
+		// Return status 403 and permission denied error message.
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"error": true,
+			"msg":   "permission denied, only the creator can delete his book",
+		})
+	}
+}
+
+// DeleteBook func for deletes book by given ID.
+// @Description Delete book by given ID.
+// @Summary delete book by given ID
+// @Tags Book
+// @Accept json
+// @Produce json
+// @Param id body string true "Book ID"
+// @Success 204 {string} status "ok"
+// @Security ApiKeyAuth
+// @Router /v1/book [delete]
+func DeleteBook(c *fiber.Ctx) error {
+	// Get now time.
+	now := time.Now().Unix()
+
+	// Get claims from JWT.
+	claims, err := utils.ExtractTokenMetadata(c)
+	if err != nil {
+		// Return status 500 and JWT parse error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Set expiration time from JWT data of current book.
+	expires := claims.Expires
+
+	// Checking, if now time greather than expiration from JWT.
+	if now > expires {
+		// Return status 401 and unauthorized error message.
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": true,
+			"msg":   "unauthorized, check expiration time of your token",
+		})
+	}
+
+	// Set credential `book:delete` from JWT data of current book.
+	credential := claims.Credentials[repository.BookDeleteCredential]
+
+	// Only book creator with `book:delete` credential can delete his book.
+	if !credential {
+		// Return status 403 and permission denied error message.
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"error": true,
+			"msg":   "permission denied, check credentials of your token",
+		})
+	}
+
+	// Create new Book struct
+	book := &models.Book{}
+
+	// Check, if received JSON data is valid.
+	if err := c.BodyParser(book); err != nil {
+		// Return status 400 and error message.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Create a new validator for a Book model.
+	validate := utils.NewValidator()
+
+	// Validate book fields.
+	if err := validate.StructPartial(book, "id"); err != nil {
+		// Return, if some fields are not valid.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   utils.ValidatorErrors(err),
+		})
+	}
+
+	// Create database connection.
+	db, err := database.OpenDBConnection()
+	if err != nil {
+		// Return status 500 and database connection error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Checking, if book with given ID is exists.
+	foundedBook, err := db.GetBook(book.ID)
+	if err != nil {
+		// Return status 404 and book not found error.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "book with this ID not found",
+		})
+	}
+
+	// Set user ID from JWT data of current user.
+	userID := claims.UserID
+
+	// Only the creator can delete his book.
+	if foundedBook.UserID == userID {
+		// Delete book by given ID.
+		if err := db.DeleteBook(foundedBook.ID); err != nil {
+			// Return status 500 and error message.
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"error": true,
+				"msg":   err.Error(),
+			})
+		}
+
+		// Return status 204 no content.
+		return c.SendStatus(fiber.StatusNoContent)
+	} else {
+		// Return status 403 and permission denied error message.
+		return c.Status(fiber.StatusForbidden).JSON(fiber.Map{
+			"error": true,
+			"msg":   "permission denied, only the creator can delete his book",
+		})
+	}
+}
