# docs/swagger.yaml
@@ -1,5 +1,40 @@
-basePath: /
+basePath: /api
 definitions:
+  models.Book:
+    properties:
+      author:
+        type: string
+      book_attrs:
+        $ref: '#/definitions/models.BookAttrs'
+      book_status:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    required:
+    - author
+    - book_attrs
+    - book_status
+    - id
+    - title
+    - user_id
+    type: object
+  models.BookAttrs:
+    properties:
+      description:
+        type: string
+      picture:
+        type: string
+      rating:
+        type: integer
+    type: object
   models.User:
     properties:
       created_at:
@@ -8,48 +43,198 @@ definitions:
         type: string
       id:
         type: string
+      password_hash:
+        type: string
       updated_at:
         type: string
-      user_attrs:
-        $ref: '#/definitions/models.UserAttrs'
+      user_role:
+        type: string
       user_status:
         type: integer
     required:
     - email
     - id
-    type: object
-  models.UserAttrs:
-    properties:
-      about:
-        type: string
-      first_name:
-        type: string
-      last_name:
-        type: string
-      picture:
-        type: string
+    - password_hash
+    - user_role
+    - user_status
     type: object
 info:
   contact:
     email: your@mail.com
     name: API Support
-  description: This is an auto-generated API Docs for Fiber Template.
+  description: This is an auto-generated API Docs.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Fiber Template API
+  title: API
   version: "1.0"
 paths:
-  /api/private/user:
+  /v1/book:
     delete:
       consumes:
       - application/json
-      description: Delete user by given ID.
+      description: Delete book by given ID.
       parameters:
-      - description: User ID
+      - description: Book ID
         in: body
         name: id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ok
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: delete book by given ID
+      tags:
+      - Book
+    post:
+      consumes:
+      - application/json
+      description: Create a new book.
+      parameters:
+      - description: Title
+        in: body
+        name: title
+        required: true
+        schema:
+          type: string
+      - description: Author
+        in: body
+        name: author
+        required: true
+        schema:
+          type: string
+      - description: User ID
+        in: body
+        name: user_id
+        required: true
+        schema:
+          type: string
+      - description: Book attributes
+        in: body
+        name: book_attrs
+        required: true
+        schema:
+          $ref: '#/definitions/models.BookAttrs'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Book'
+      security:
+      - ApiKeyAuth: []
+      summary: create a new book
+      tags:
+      - Book
+    put:
+      consumes:
+      - application/json
+      description: Update book.
+      parameters:
+      - description: Book ID
+        in: body
+        name: id
+        required: true
+        schema:
+          type: string
+      - description: Title
+        in: body
+        name: title
+        required: true
+        schema:
+          type: string
+      - description: Author
+        in: body
+        name: author
+        required: true
+        schema:
+          type: string
+      - description: User ID
+        in: body
+        name: user_id
+        required: true
+        schema:
+          type: string
+      - description: Book status
+        in: body
+        name: book_status
+        required: true
+        schema:
+          type: integer
+      - description: Book attributes
+        in: body
+        name: book_attrs
+        required: true
+        schema:
+          $ref: '#/definitions/models.BookAttrs'
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: ok
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: update book
+      tags:
+      - Book
+  /v1/book/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get book by given ID.
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Book'
+      summary: get book by given ID
+      tags:
+      - Book
+  /v1/books:
+    get:
+      consumes:
+      - application/json
+      description: Get all exists books.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Book'
+            type: array
+      summary: get all exists books
+      tags:
+      - Book
+  /v1/token/renew:
+    post:
+      consumes:
+      - application/json
+      description: Renew access and refresh tokens.
+      parameters:
+      - description: Refresh token
+        in: body
+        name: refresh_token
         required: true
         schema:
           type: string
@@ -62,66 +247,78 @@ paths:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: delete user by given ID
+      summary: renew access and refresh tokens
       tags:
-      - User
+      - Token
+  /v1/user/sign/in:
     post:
       consumes:
       - application/json
-      description: Create a new user.
+      description: Auth user and return access and refresh token.
       parameters:
-      - description: E-mail
+      - description: User Email
         in: body
         name: email
         required: true
         schema:
           type: string
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.User'
-      security:
-      - ApiKeyAuth: []
-      summary: create a new user
-      tags:
-      - User
-    put:
-      consumes:
-      - application/json
-      description: Update user.
-      parameters:
-      - description: User ID
+      - description: User Password
         in: body
-        name: id
+        name: password
         required: true
         schema:
           type: string
       produces:
       - application/json
       responses:
-        "202":
-          description: Accepted
+        "200":
+          description: ok
           schema:
-            $ref: '#/definitions/models.User'
+            type: string
+      summary: auth user and return access and refresh token
+      tags:
+      - User
+  /v1/user/sign/out:
+    post:
+      consumes:
+      - application/json
+      description: De-authorize user and delete refresh token from Redis.
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ok
+          schema:
+            type: string
       security:
       - ApiKeyAuth: []
-      summary: update user
+      summary: de-authorize user and delete refresh token from Redis
       tags:
       - User
-  /api/public/user/{id}:
-    get:
+  /v1/user/sign/up:
+    post:
       consumes:
       - application/json
-      description: Get user by given ID.
+      description: Create a new user.
       parameters:
-      - description: User ID
-        in: path
-        name: id
+      - description: Email
+        in: body
+        name: email
         required: true
-        type: string
+        schema:
+          type: string
+      - description: Password
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      - description: User role
+        in: body
+        name: user_role
+        required: true
+        schema:
+          type: string
       produces:
       - application/json
       responses:
@@ -129,26 +326,9 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.User'
-      summary: get user by given ID
+      summary: create a new user
       tags:
       - User
-  /api/public/users:
-    get:
-      consumes:
-      - application/json
-      description: Get all exists users.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.User'
-            type: array
-      summary: get all exists users
-      tags:
-      - Users
 securityDefinitions:
   ApiKeyAuth:
     in: header
