# pkg/routes/public_routes.go
@@ -1,16 +1,20 @@
 package routes
 
 import (
-	"github.com/create-go-app/fiber-go-template/app/controllers"
+	"book-rapid-development-with-fiber/app/controllers"
 	"github.com/gofiber/fiber/v2"
 )
 
 // PublicRoutes func for describe group of public routes.
 func PublicRoutes(a *fiber.App) {
 	// Create routes group.
-	route := a.Group("/api/public")
+	route := a.Group("/api/v1")
 
 	// Routes for GET method:
-	route.Get("/user/:id", controllers.GetUser) // get one user by ID
-	route.Get("/users", controllers.GetUsers)   // get list of all users
+	route.Get("/books", controllers.GetBooks)   // get list of all books
+	route.Get("/book/:id", controllers.GetBook) // get one book by ID
+
+	// Routes for POST method:
+	route.Post("/user/sign/up", controllers.UserSignUp) // register a new user
+	route.Post("/user/sign/in", controllers.UserSignIn) // auth, return Access & Refresh tokens
 }
